--- a/packages/website/src/_includes/layouts/base.njk
+++ b/packages/website/src/_includes/layouts/base.njk
@@ -9,9 +9,18 @@
     <link rel="icon" href="/images/icon.svg" type="image/svg+xml">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <script>
+      // On page load or when changing themes, best to add inline in `head` to avoid FOUC
+      if (localStorage.theme === 'dark' || (!('theme' in localStorage) && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
+        document.documentElement.classList.add('dark')
+      } else {
+        document.documentElement.classList.remove('dark')
+      }
+    </script>
   </head>
 
-  <body class="font-inter antialiased bg-white text-gray-900 tracking-tight flex flex-col min-h-screen">
+  <body class="font-inter antialiased bg-white text-gray-900 dark:bg-black dark:text-white  tracking-tight flex flex-col min-h-screen">
 
     {% include "../components/navigation.njk" %}
 
