--- a/packages/website/src/pages/docs/active-list/active-list.njk
+++ b/packages/website/src/pages/docs/active-list/active-list.njk
@@ -12,7 +12,7 @@ permalink: /docs/active-list/
   </p>
 
   <a 
-    class="flex justify-between items-center p-4 rounded border border-gray-200 transition duration-300 ease-in-out bg-white shadow-md hover:shadow-lg mb-4" 
+    class="card" 
     href="/docs/active-list/concepts/"
   >
     <div>
@@ -25,7 +25,7 @@ permalink: /docs/active-list/
   </a>
 
    <a 
-    class="flex justify-between items-center p-4 rounded border border-gray-200 transition duration-300 ease-in-out bg-white shadow-md hover:shadow-lg mb-4" 
+    class="card" 
     href="/docs/active-list/tutorial/"
   >
     <div>
@@ -38,7 +38,7 @@ permalink: /docs/active-list/
   </a>
 
   <a 
-    class="flex justify-between items-center p-4 rounded border border-gray-200 transition duration-300 ease-in-out bg-white shadow-md hover:shadow-lg mb-4" 
+    class="card" 
     href="/docs/active-list/usage-with-frameworks/"
   >
     <div>
@@ -51,7 +51,7 @@ permalink: /docs/active-list/
   </a>
 
   <a 
-    class="flex justify-between items-center p-4 rounded border border-gray-200 transition duration-300 ease-in-out bg-white shadow-md hover:shadow-lg mb-4" 
+    class="card" 
     href="/docs/active-list/examples/"
   >
     <div>
