--- a/packages/website/src/pages/docs/active-list/examples.njk
+++ b/packages/website/src/pages/docs/active-list/examples.njk
@@ -19,7 +19,7 @@ renderData:
     {% for example in examples %}
       {% if example.for === 'ActiveList' %}
         <a 
-          class="p-4 rounded border border-gray-200 transition duration-300 ease-in-out bg-white shadow-md hover:shadow-lg mb-4" 
+          class="example-card" 
           href="{{ example.url }}"
         >
           <div class="flex flex-col h-full">
