--- a/packages/website/src/pages/home/home.njk
+++ b/packages/website/src/pages/home/home.njk
@@ -6,27 +6,10 @@ permalink: /
 
 {# Hero #}
 <section class="relative">
-  <!-- Illustration behind hero content -->
-  <div class="absolute left-1/2 transform -translate-x-1/2 bottom-0 pointer-events-none -z-1" aria-hidden="true">
-    <svg width="1360" height="578" viewBox="0 0 1360 578" xmlns="http://www.w3.org/2000/svg">
-      <defs>
-        <linearGradient x1="50%" y1="0%" x2="50%" y2="100%" id="illustration-01">
-          <stop stop-color="#FFF" offset="0%"/>
-          <stop stop-color="#EAEAEA" offset="77.402%"/>
-          <stop stop-color="#DFDFDF" offset="100%"/>
-        </linearGradient>
-      </defs>
-      <g fill="url(#illustration-01)" fill-rule="evenodd">
-        <circle cx="1232" cy="128" r="128"/>
-        <circle cx="155" cy="443" r="64"/>
-      </g>
-    </svg>
-  </div>
-
   <div class="max-w-6xl mx-auto px-4 sm:px-6 pt-32 mb-8 text-center">  
     <h1 class="text-5xl md:text-6xl font-extrabold leading-tighter tracking-tighter mb-4">uiloos makes creating component libraries <span class="bg-clip-text text-transparent bg-gradient-to-r from-purple-500 to-orange-600">easier and faster</span></h1>
     <div class="max-w-3xl mx-auto">
-      <p class="text-2xl text-gray-800 mb-8">
+      <p class="text-2xl text-gray-800 dark:text-white mb-8">
         uiloos is a headless UI library which provides common components without any styling. You create the design and "uiloos" provides the behavior.
       </p>
       <div class="max-w-xs mx-auto sm:max-w-none sm:flex sm:justify-center">
@@ -63,7 +46,7 @@ permalink: /
   <!-- Section header -->
   <div class="max-w-3xl mx-auto text-center mb-8">
     <h2>Behavior vs look and feel</h2>
-    <p class="text-gray-800 mb-4">
+    <p class="text-gray-800 dark:text-white mb-4">
       You handle the look and feel of your application / website and
       let uiloos handle the behavior. Spend more time configuring
       behavior instead of coding it, try it out yourself:
@@ -72,7 +55,7 @@ permalink: /
 
   <div class="grid gap-6 lg:grid-cols-2">
     <!-- Code panel -->
-    <div class="shadow-xl text-left font-mono bg-gray-700 text-white p-4 text-lg">
+    <div class="shadow-xl text-left font-mono bg-gray-800 text-white p-4 text-lg">
       <div class="flex">
         <span class="text-purple-400 mr-2">const</span> 
         <span class="text-red-400 mr-2">carousel</span> 
@@ -381,31 +364,31 @@ permalink: /
   <!-- Section header -->
   <div class="max-w-3xl mx-auto text-center mb-8">
     <h2>Works with your stack</h2>
-    <p class="text-gray-800">Use your favorite framework / library, or simply go vanilla. uiloos will work with your current stack and enhance it.</p>
+    <p class="text-gray-800 dark:text-white">Use your favorite framework / library, or simply go vanilla. uiloos will work with your current stack and enhance it.</p>
   </div>
 
   <!-- Items -->
   <div class="max-w-sm mx-auto grid gap-6 md:grid-cols-3 lg:grid-cols-3 items-start md:max-w-2xl lg:max-w-none">
 
     <!-- 1st item -->
-    <div class="relative flex flex-col items-center p-6 bg-white rounded shadow-xl h-full">
+    <div class="relative flex flex-col items-center p-6 bg-white dark:bg-gray-800 rounded shadow-xl h-full">
       <img src="/images/frameworks/react.svg" class="w-16 h-16 p-1 -mt-1 mb-2" loading="lazy" alt="React logo" />
       <h3 class="font-bold leading-snug tracking-tight mb-1">React</h3>
-      <p class="text-gray-800 text-center">Use ready made React components and hooks.</p>
+      <p class="text-gray-800 dark:text-white text-center">Use ready made React components and hooks.</p>
     </div>
 
     <!-- 2nd item -->
-    <div class="relative flex flex-col items-center p-6 bg-white rounded shadow-xl h-full">
+    <div class="relative flex flex-col items-center p-6 bg-white dark:bg-gray-800 rounded shadow-xl h-full">
       <img src="/images/frameworks/vue.svg" class="w-16 h-16 p-1 -mt-1 mb-2" loading="lazy" alt="Vue logo"/>
       <h3 class="font-bold leading-snug tracking-tight mb-1">Vue</h3>
-      <p class="text-gray-800 text-center">Use pre-baked Vue components and composables.</p>
+      <p class="text-gray-800 dark:text-white text-center">Use pre-baked Vue components and composables.</p>
     </div>
 
     <!-- 3rd item -->
-    <div class="relative flex flex-col items-center p-6 bg-white rounded shadow-xl h-full">
+    <div class="relative flex flex-col items-center p-6 bg-white dark:bg-gray-800 rounded shadow-xl h-full">
       <img src="/images/frameworks/vanilla.svg" class="w-16 h-16 p-1 -mt-1 mb-2" loading="lazy" alt="JavaScript unofficial logo" />
       <h3 class="font-bold leading-snug tracking-tight mb-1">Vanilla</h3>
-      <p class="text-gray-800 text-center">Or use no framework at all and listen to changes yourself</p>
+      <p class="text-gray-800 dark:text-white text-center">Or use no framework at all and listen to changes yourself</p>
     </div>
   </div>
 </section>
@@ -416,7 +399,7 @@ permalink: /
   <!-- Section header -->
   <div class="max-w-3xl mx-auto text-center mb-8">
     <h2>What uiloos provides</h2>
-    <p class="text-gray-800">See what uiloos means for your role via a letter written just for you</p>
+    <p class="text-gray-800 dark:text-white">See what uiloos means for your role via a letter written just for you</p>
   </div>
 
   <!-- Persona list -->
