--- a/packages/website/src/pages/docs/active-list/concept.njk
+++ b/packages/website/src/pages/docs/active-list/concept.njk
@@ -548,7 +548,7 @@ renderData:
   </p>
 
   <a
-    class="flex justify-between items-center p-4 rounded border border-gray-200 transition duration-300 ease-in-out bg-white shadow-md hover:shadow-lg mb-4"
+    class="card"
     href="/docs/active-list/tutorial/"
   >
     <div>
