--- a/packages/website/src/pages/docs/active-list/concepts/accordion/accordion.njk
+++ b/packages/website/src/pages/docs/active-list/concepts/accordion/accordion.njk
@@ -17,10 +17,10 @@
   <summary class="mb-4">View code</summary>
 
   <div class="js-example-switcher">
-    <div class="flex bg-gray-200 px-2 pt-2 pb-4 gap-4">
-      <button class="border font-bold border-0 border-b-4 hover:text-purple-800 hover:border-purple-500">JavaScript</button>
-      <button class="border font-bold border-0 border-b-4 hover:text-purple-800 hover:border-purple-500">HTML</button>
-      <button class="border font-bold border-0 border-b-4 hover:text-purple-800 hover:border-purple-500">CSS</button>
+    <div class="flex bg-gray-200 dark:bg-gray-700 px-2 pt-2 pb-4 gap-4">
+      <button class="border font-bold border-0 border-b-4 hover:text-purple-500 hover:border-purple-500">JavaScript</button>
+      <button class="border font-bold border-0 border-b-4 hover:text-purple-500 hover:border-purple-500">HTML</button>
+      <button class="border font-bold border-0 border-b-4 hover:text-purple-500 hover:border-purple-500">CSS</button>
     </div>
 
     <div class="example">
