--- a/packages/website/src/pages/docs/active-list/tutorial.njk
+++ b/packages/website/src/pages/docs/active-list/tutorial.njk
@@ -627,7 +627,7 @@ const config = {
   </ol>
 
    <a 
-    class="flex justify-between items-center p-4 rounded border border-gray-200 transition duration-300 ease-in-out bg-white shadow-md hover:shadow-lg mb-4" 
+    class="card" 
     href="/docs/active-list/usage-with-frameworks/"
   >
     <div>
