--- a/packages/website/src/pages/docs/getting-started/activation.njk
+++ b/packages/website/src/pages/docs/getting-started/activation.njk
@@ -54,7 +54,7 @@ licenseChecker.activateLicense(
     </p>
 
     <a 
-      class="flex justify-between items-center p-4 rounded border border-gray-200 transition duration-300 ease-in-out bg-white shadow-md hover:shadow-lg mb-4" 
+      class="card" 
       href="/docs/active-list/concepts/"
     >
       <div>
