--- a/packages/website/src/pages/docs/view-channel/tutorial.njk
+++ b/packages/website/src/pages/docs/view-channel/tutorial.njk
@@ -718,7 +718,7 @@ progressEl.style.animation = `progress ${view.autoDismiss.duration}ms ease-out`;
   </ol>
 
    <a 
-    class="flex justify-between items-center p-4 rounded border border-gray-200 transition duration-300 ease-in-out bg-white shadow-md hover:shadow-lg mb-4" 
+    class="card" 
     href="/docs/view-channel/usage-with-frameworks/"
   >
     <div>
