--- a/packages/website/src/pages/pricing/pricing.njk
+++ b/packages/website/src/pages/pricing/pricing.njk
@@ -7,11 +7,11 @@ eleventyNavigation:
   order: 3
 ---
 
-<section class="bg-gradient-to-b from-white to-gray-100 text-lg max-w-6xl mx-auto px-4 sm:px-6 pt-32 pb-12 md:pt-40 md:pb-20">
+<section class="bg-gradient-to-b from-white to-gray-100 dark:from-black dark:to-black text-lg max-w-6xl mx-auto px-4 sm:px-6 pt-32 pb-12 md:pt-40 md:pb-20">
   <!-- Section header -->
   <div class="max-w-3xl mx-auto text-center pb-12">
     <h1>Pricing</h1>
-    <p class="text-2xl text-gray-600">Our pricing is based on the number of developers using uiloos.</p>
+    <p class="text-2xl text-gray-600 dark:text-white dark:text-white">Our pricing is based on the number of developers using uiloos.</p>
   </div>
 
   <!-- Pricing tables -->
@@ -19,16 +19,16 @@ eleventyNavigation:
 
     <!-- Pricing toggle -->
     <div class="flex justify-center max-w-xs m-auto mb-16">
-      <div class="relative flex w-full mx-6 p-1 bg-gray-200 rounded">
+      <div class="relative flex w-full mx-6 p-1 bg-gray-200 dark:bg-gray-800 rounded">
         <span class="absolute inset-0 m-1 pointer-events-none" aria-hidden="true">
-          <span class="absolute inset-0 w-1/2 bg-white rounded shadow transform transition duration-150 ease-in-out" :class="value ? 'translate-x-0' : 'translate-x-full'"></span>
+          <span class="absolute inset-0 w-1/2 bg-white dark:bg-black rounded shadow transform transition duration-150 ease-in-out" :class="value ? 'translate-x-0' : 'translate-x-full'"></span>
         </span>
         <button 
           class="relative flex-1 text-sm font-medium p-1 transition duration-150 ease-in-out"
           :class="{'text-gray-500':!value}"
           @click.prevent="value = true"
         >
-          Bill Yearly <span class="text-green-500">-10%</span>
+          Bill Yearly <span class="text-green-500 dark:text-green-300">-10%</span>
         </button>
         <button
           class="relative flex-1 text-sm font-medium p-1 transition duration-150 ease-in-out"
@@ -43,16 +43,16 @@ eleventyNavigation:
     <div class="mx-auto grid gap-2 lg:grid-cols-3 xl:gap-4 items-start">
 
         <!-- Pricing Free -->
-      <div class="relative flex flex-col h-full py-5 px-6 rounded bg-white shadow-xl">
+      <div class="relative flex flex-col h-full py-5 px-6 rounded bg-white dark:bg-gray-900 shadow-xl">
         <div class="mb-4">
           <div class="text-lg font-bold mb-1">Evaluation / Personal use</div>
           <div class="inline-flex items-baseline mb-2">
             <span class="text-4xl font-bold">Free</span>
           </div>
-          <p class="text-gray-600 mb-2">As in beer</p>
-          <div class="text-lg text-gray-800">For experimenting with uiloos, and personal use.</div>
+          <p class="text-gray-600 dark:text-white mb-2">As in beer</p>
+          <div class="text-lg text-gray-800 dark:text-white">For experimenting with uiloos, and personal use.</div>
         </div>
-        <ul class="text-gray-600 -mb-2 grow">
+        <ul class="text-gray-600 dark:text-white -mb-2 grow">
           <li class="flex items-center mb-2">
             <svg class="w-3 h-3 fill-current text-green-500 mr-3 shrink-0" viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg">
               <path d="M10.28 2.28L3.989 8.575 1.695 6.28A1 1 0 00.28 7.695l3 3a1 1 0 001.414 0l7-7A1 1 0 0010.28 2.28z"/>
@@ -84,18 +84,18 @@ eleventyNavigation:
       </div>
 
       <!-- Pricing Standard -->
-      <div class="relative flex flex-col h-full py-5 px-6 rounded bg-white shadow-xl">
+      <div class="relative flex flex-col h-full py-5 px-6 rounded bg-white dark:bg-gray-900 shadow-xl">
         <div class="mb-4">
           <div class="text-lg font-bold mb-1">Standard</div>
           <div class="inline-flex items-baseline mb-2">
             <span class="text-3xl font-bold">$</span>
             <span x-text="priceOutput.standard[value].price" class="text-4xl font-bold"></span>
-            <span class="text-sm text-gray-600 pl-2">Ex VAT</span>
+            <span class="text-sm text-gray-600 dark:text-white pl-2">Ex VAT</span>
           </div>
-          <p x-text="priceOutput.standard[value].description" class="text-gray-600 mb-2" ></p>
-          <div class="text-lg text-gray-800">For websites, (mobile) applications, SaaS solutions and games.</div>
+          <p x-text="priceOutput.standard[value].description" class="text-gray-600 dark:text-white mb-2" ></p>
+          <div class="text-lg text-gray-800 dark:text-white">For websites, (mobile) applications, SaaS solutions and games.</div>
         </div>
-        <ul class="text-gray-600 -mb-2 grow">
+        <ul class="text-gray-600 dark:text-white -mb-2 grow">
           <li class="flex items-center mb-2">
             <svg class="w-3 h-3 fill-current text-green-500 mr-3 shrink-0" viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg">
               <path d="M10.28 2.28L3.989 8.575 1.695 6.28A1 1 0 00.28 7.695l3 3a1 1 0 001.414 0l7-7A1 1 0 0010.28 2.28z"/>
@@ -133,7 +133,7 @@ eleventyNavigation:
       </div>
 
       <!-- Pricing Enterprise -->
-      <div class="relative flex flex-col h-full py-5 px-6 rounded bg-white shadow-xl">
+      <div class="relative flex flex-col h-full py-5 px-6 rounded bg-white dark:bg-gray-900 shadow-xl">
         <div class="absolute top-0 right-0 mr-5 p-3 -mt-5 bg-yellow-500 rounded-full">
           <svg class="w-4 h-4 fill-current text-white" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
             <path d="M15.145 5.05l-4.316-.627L8.898.513c-.338-.684-1.456-.684-1.794 0l-1.93 3.91-4.317.627a1.002 1.002 0 00-.554 1.707l3.124 3.044-.737 4.3a1 1 0 001.45 1.053L8 13.125l3.862 2.03c.728.381 1.59-.234 1.45-1.054l-.736-4.299L15.7 6.758a1.003 1.003 0 00-.555-1.708z"/>
@@ -145,13 +145,13 @@ eleventyNavigation:
           <div class="inline-flex items-baseline mb-2">
             <span class="text-3xl font-bold">$</span>
             <span x-text="priceOutput.enterprise[value].price" class="text-4xl font-bold"></span>
-            <span class="text-sm text-gray-600 pl-2">Ex VAT</span>
+            <span class="text-sm text-gray-600 dark:text-white pl-2">Ex VAT</span>
           </div>
-          <p x-text="priceOutput.enterprise[value].description"class="text-gray-600 mb-2" ></p>
-          <div class="text-lg text-gray-800">For larger companies with more than 50 developers</div>
+          <p x-text="priceOutput.enterprise[value].description"class="text-gray-600 dark:text-white mb-2" ></p>
+          <div class="text-lg text-gray-800 dark:text-white">For larger companies with more than 50 developers</div>
         </div>
 
-        <ul class="text-gray-600 -mb-2 grow">
+        <ul class="text-gray-600 dark:text-white -mb-2 grow">
           <li class="flex items-center mb-2">
             <svg class="w-3 h-3 fill-current text-green-500 mr-3 shrink-0" viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg">
               <path d="M10.28 2.28L3.989 8.575 1.695 6.28A1 1 0 00.28 7.695l3 3a1 1 0 001.414 0l7-7A1 1 0 0010.28 2.28z"/>
