--- a/packages/website/src/pages/releases/releases.njk
+++ b/packages/website/src/pages/releases/releases.njk
@@ -18,7 +18,7 @@ renderData:
   <ol>
     <li>
       <a
-        class="flex justify-between items-center p-4 rounded border border-gray-200 transition duration-300 ease-in-out bg-white shadow-md hover:shadow-lg mb-4"
+        class="card"
         href="/releases/core/"
       >
         <div>
@@ -42,7 +42,7 @@ renderData:
 
     <li>
       <a
-        class="flex justify-between items-center p-4 rounded border border-gray-200 transition duration-300 ease-in-out bg-white shadow-md hover:shadow-lg mb-4"
+        class="card"
         href="/releases/react/"
       >
         <div>
@@ -63,7 +63,7 @@ renderData:
 
     <li>
       <a
-        class="flex justify-between items-center p-4 rounded border border-gray-200 transition duration-300 ease-in-out bg-white shadow-md hover:shadow-lg mb-4"
+        class="card"
         href="/releases/vue/"
       >
         <div>
@@ -84,7 +84,7 @@ renderData:
 
     <li>
       <a
-        class="flex justify-between items-center p-4 rounded border border-gray-200 transition duration-300 ease-in-out bg-white shadow-md hover:shadow-lg mb-4"
+        class="card"
         href="/releases/angular/"
       >
         <div>
