website: added command k search modal.
It works by indexing the core.json file and presenting hits when a name
includes the query.

Also increased the size of the font of the main navigation.

--- a/packages/website/src/_includes/components/navigation.njk
+++ b/packages/website/src/_includes/components/navigation.njk
@@ -8,7 +8,7 @@
   :class="{ 'bg-white dark:bg-black backdrop-blur-sm shadow-lg' : !top }"
 >
 {% endif %}
-  <div class="max-w-6xl mx-auto px-5 sm:px-6 flex items-center justify-between h-16 md:h-20">
+  <div class="max-w-6xl mx-auto px-5 sm:px-6 flex items-center justify-between h-16 md:h-20 text-xl">
   
     <!-- Site branding -->
     <div class="shrink-0 mr-4">
@@ -33,16 +33,27 @@
       </ul>
     </nav>
 
-    <div class="flex justify-center">
+    <div class="flex justify-end grow md:grow-0 mr-4">
       <button
-        class="mx-4" 
+        class="mx-2" 
         id="darkModeToggle"
         title="Toggle dark / light mode" 
         aria-label="Toggle dark / light mode"
       >
         <img alt="Moon representing dark mode" src="/images/icons/moon.svg" width="26" height="26" class="dark:hidden"/>
         <img alt="Sun representing light mode" src="/images/icons/sun.svg" width="32" height="32" class="hidden dark:block stoke-white"/>
-      </button
+      </button>
+
+       <button
+        class="mx-2" 
+        id="searchToggle"
+        title="Search API and documentation" 
+        aria-label="Search API and documentation"
+      >
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 dark:stroke-white">
+          <path stroke-linecap="round" stroke-linejoin="round" d="M21 21l-5.197-5.197m0 0A7.5 7.5 0 105.196 5.196a7.5 7.5 0 0010.607 10.607z" />
+        </svg>
+      </button>
     </div>  
 
     <!-- Mobile menu -->
