website: fix overflow on main page on mobile devices, fixed next prev
Overflow happened on the "code" example, fixed by adding a oveflow
scroll, and making the font smaller on mobile devices.

The carousel's next and previous buttons were in the purple text area on
mobile devices. Fixed by giving the next and previous buttons a lower
top on mobile devices.

--- a/packages/website/src/pages/home/home.njk
+++ b/packages/website/src/pages/home/home.njk
@@ -55,7 +55,7 @@ permalink: /
 
   <div class="grid gap-6 lg:grid-cols-2">
     <!-- Code panel -->
-    <div class="shadow-xl text-left font-mono bg-gray-800 text-white p-4 text-lg">
+    <div class="shadow-xl text-left font-mono bg-gray-800 text-white p-4 text-sm sm:text-lg overflow-scroll">
       <div class="flex">
         <span class="text-purple-400 mr-2">const</span> 
         <span class="text-red-400 mr-2">carousel</span> 
@@ -330,7 +330,7 @@ permalink: /
       </div>
       
       <!-- Controls -->
-      <div class="absolute top-64 w-full">
+      <div class="absolute top-32 sm:top-64 w-full">
         <div class="flex justify-between">
           <button 
             id="carousel-prev"
