--- a/packages/website/src/pages/api/angular/angular.njk
+++ b/packages/website/src/pages/api/angular/angular.njk
@@ -2,6 +2,9 @@
 title: Angular | API | uiloos
 layout: layouts/api.njk
 permalink: /api/angular/
+renderData: 
+  description: "Lists the API for the @uiloos/angular package"
+  keywords: "API hub @uiloos/angular, angular bindings uiloos"
 ---
 
 {% from "../_includes/macros.njk" import displayApi %}
