--- a/packages/website/src/pages/api/api.njk
+++ b/packages/website/src/pages/api/api.njk
@@ -5,6 +5,9 @@ permalink: /api/
 eleventyNavigation:
   key: API
   order: 1
+renderData: 
+  description: "The API hub page for uiloos, shows all sub packages."
+  keywords: "uiloos API, uiloos api"
 ---
 
 <article>
