--- a/packages/website/src/pages/api/core/core.njk
+++ b/packages/website/src/pages/api/core/core.njk
@@ -2,6 +2,9 @@
 title: Core | API | uiloos
 layout: layouts/api.njk
 permalink: /api/core/
+renderData: 
+  description: "Lists the API for the @uiloos/core package"
+  keywords: "API hub @uiloos/core"
 ---
 
 {% from "../_includes/macros.njk" import displayApiGroup %}
