--- a/packages/website/src/pages/api/vue/vue.njk
+++ b/packages/website/src/pages/api/vue/vue.njk
@@ -2,6 +2,9 @@
 title: Vue | API | uiloos
 layout: layouts/api.njk
 permalink: /api/vue/
+renderData: 
+  description: "Lists the API for the @uiloos/vue package"
+  keywords: "API hub @uiloos/vue, vue bindings uiloos"
 ---
 
 {% from "../_includes/macros.njk" import displayApi %}
