--- a/packages/website/src/pages/docs/active-list/active-list.njk
+++ b/packages/website/src/pages/docs/active-list/active-list.njk
@@ -2,6 +2,9 @@
 title: ActiveList | Docs | uiloos
 layout: layouts/docs.njk
 permalink: /docs/active-list/
+renderData: 
+  description: "The documentation hub page for the ActiveList component of uiloos."
+  keywords: "uiloos ActiveList docs, ActiveList, ActiveList docs"
 ---
 
 <article>
