--- a/packages/website/src/pages/docs/active-list/tutorial.njk
+++ b/packages/website/src/pages/docs/active-list/tutorial.njk
@@ -5,10 +5,12 @@ permalink: /docs/active-list/tutorial/
 renderData:
   parent: 'active-list'
   current: 'active-list-tutorial'
+  description: "Tutorial which teaches you how to create a carousel component using the ActiveList from uiloos"
+  keywords: "ActiveList tutorial, ActiveList carousel tutorial"
 ---
 
 <article>
-  <h1>ActiveList Tutorial</h1>
+  <h1>ActiveList carousel tutorial</h1>
 
   <nav class="2xl:fixed 2xl:top-24 2xl:right-2 2xl:w-[270px]" role="doc-toc">
     <em>Table of contents</em>
