--- a/packages/website/src/pages/docs/getting-started/activation.njk
+++ b/packages/website/src/pages/docs/getting-started/activation.njk
@@ -6,6 +6,8 @@ renderData:
   parent: 'getting-started'
   current: 'activation'
   stickyNavigation: false
+  description: "Learn how to activate uiloos using the license key."
+  keywords: "uiloos activation, uiloos license key, activate uiloos"
 ---
 
 <section class="max-w-5xl mx-auto px-4 sm:px-6 md:pb-20 xl:flex xl:justify-between">
