--- a/packages/website/src/pages/docs/getting-started/installation.njk
+++ b/packages/website/src/pages/docs/getting-started/installation.njk
@@ -5,6 +5,8 @@ permalink: /docs/getting-started/installation/
 renderData:
   parent: 'getting-started'
   current: 'installation'
+  description: "Installing uiloos using a package manager or via a CDN."
+  keywords: "uiloos installation, uiloos npm, uiloos yarn, uiloos pnpm, uiloos unpkg"
 ---
 
 <article>
