--- a/packages/website/src/pages/docs/view-channel/examples.njk
+++ b/packages/website/src/pages/docs/view-channel/examples.njk
@@ -5,6 +5,8 @@ permalink: /docs/view-channel/examples/
 renderData:
   parent: 'view-channel'
   current: 'view-channel-examples'
+  description: "Shows multiple complete examples on how to use the ViewChannel from uiloos."
+  keywords: "ViewChannel examples, ViewChannel flash messages example, ViewChannel notification center example, ViewChannel modal example, ViewChannel dialog example"
 ---
 
 <article>
