--- a/packages/website/src/pages/docs/view-channel/frameworks.njk
+++ b/packages/website/src/pages/docs/view-channel/frameworks.njk
@@ -5,6 +5,8 @@ permalink: /docs/view-channel/usage-with-frameworks/
 renderData:
   parent: 'view-channel'
   current: 'view-channel-frameworks'
+  description: "How to use the ViewChannel with frameworks such as React, Angular or Vue."
+  keywords: "ViewChannel, ViewChannel React, ViewChannel Vue, ViewChannel Angular"
 ---
 
 <article>
