--- a/packages/website/src/pages/docs/view-channel/tutorial.njk
+++ b/packages/website/src/pages/docs/view-channel/tutorial.njk
@@ -5,10 +5,12 @@ permalink: /docs/view-channel/tutorial/
 renderData:
   parent: 'view-channel'
   current: 'view-channel-tutorial'
+  description: "Tutorial which teaches you how to create a flash message center using the ViewChannel from uiloos"
+  keywords: "ViewChannel tutorial, ViewChannel flash message tutorial"
 ---
 
 <article>
-  <h1>ViewChannel Tutorial</h1>
+  <h1>ViewChannel flash message tutorial</h1>
 
   <nav class="2xl:fixed 2xl:top-24 2xl:right-2 2xl:w-[270px]" role="doc-toc">
     <em>Table of contents</em>
