--- a/packages/website/src/pages/home/home.njk
+++ b/packages/website/src/pages/home/home.njk
@@ -2,6 +2,9 @@
 title: uiloos
 layout: layouts/base.njk
 permalink: /
+renderData: 
+  description: "uiloos is a headless library for JavaScript and TypeScript, which provides common behaviors seen in most websites and web-applications."
+  keywords: "uiloos, headless ui, component library, common web behaviors, javascript component library, typescript component library, headless component library"
 ---
 
 {# Hero #}
