--- a/packages/website/src/pages/letters/to-developers.njk
+++ b/packages/website/src/pages/letters/to-developers.njk
@@ -2,6 +2,9 @@
 title: A letter to Developers | uiloos
 layout: layouts/base.njk
 permalink: /letters/to-developers/
+renderData: 
+  description: "A letter to developers explaining the benefits of using uiloos."
+  keywords: "uiloos, benefits, developer, software developer"
 ---
 
 <section>
