--- a/packages/website/src/pages/letters/to-managers.njk
+++ b/packages/website/src/pages/letters/to-managers.njk
@@ -2,6 +2,9 @@
 title: A letter to Managers
 layout: layouts/base.njk
 permalink: /letters/to-managers/
+renderData: 
+  description: "A letter to managers explaining the benefits of using uiloos."
+  keywords: "uiloos, benefits, manager, engineering manager"
 ---
 
 <section>
