--- a/packages/website/src/pages/releases/react/1.1.0.njk
+++ b/packages/website/src/pages/releases/react/1.1.0.njk
@@ -4,6 +4,8 @@ layout: layouts/base.njk
 permalink: /releases/react/1.1.0/
 renderData:
   stickyNavigation: false
+  description: "Release notes of @uiloos/react 1.1.0"
+  keywords: "release notes @uiloos/react 1.1.0, changelog @uiloos/react 1.1.0"
 ---
 
 <section class="max-w-6xl mx-auto px-5 sm:px-6 my-8">
