--- a/packages/website/src/pages/api/react/react.njk
+++ b/packages/website/src/pages/api/react/react.njk
@@ -2,6 +2,9 @@
 title: React | API | uiloos
 layout: layouts/api.njk
 permalink: /api/react/
+renderData: 
+  description: "Lists the API for the @uiloos/react package"
+  keywords: "API hub @uiloos/react, react bindings uiloos"
 ---
 
 {% from "../_includes/macros.njk" import displayApi %}
