--- a/packages/website/src/pages/docs/active-list/examples.njk
+++ b/packages/website/src/pages/docs/active-list/examples.njk
@@ -5,6 +5,8 @@ permalink: /docs/active-list/examples/
 renderData:
   parent: 'active-list'
   current: 'active-list-examples'
+  description: "Shows multiple complete examples on how to use the ActiveList from uiloos."
+  keywords: "ActiveList examples, ActiveList carousel example, ActiveList tabs example, ActiveList sortable list example"
 ---
 
 <article>
