--- a/packages/website/src/pages/docs/getting-started/getting-started.njk
+++ b/packages/website/src/pages/docs/getting-started/getting-started.njk
@@ -2,6 +2,9 @@
 title: getting started | Docs | uiloos
 layout: layouts/docs.njk
 permalink: /docs/getting-started/
+renderData:
+  description: "Get started using uiloos"
+  keywords: "uiloos getting started"
 ---
 
 <article>
