--- a/packages/website/src/pages/docs/view-channel/concept.njk
+++ b/packages/website/src/pages/docs/view-channel/concept.njk
@@ -5,6 +5,8 @@ permalink: /docs/view-channel/concepts/
 renderData:
   parent: 'view-channel'
   current: 'view-channel-concepts'
+  description: "Provides a conceptual overview of the ViewChannel component from the uiloos library. The ViewChannel can be used to create flash messages, message centers, dialogs, and modal windows."
+  keywords: "ViewChannel concept, ViewChannel overview, ViewChannel use-cases, auto dismiss, message priority "
 ---
 
 <script src="/assets/view-channel-concepts.js" defer="true"></script>
