--- a/packages/website/src/pages/docs/view-channel/view-channel.njk
+++ b/packages/website/src/pages/docs/view-channel/view-channel.njk
@@ -2,6 +2,9 @@
 title: ViewChannel | Docs | uiloos
 layout: layouts/docs.njk
 permalink: /docs/view-channel/
+renderData: 
+  description: "The documentation hub page for the ViewChannel component of uiloos."
+  keywords: "uiloos ViewChannel docs, ViewChannel, ViewChannel docs"
 ---
 
 <article>
