--- a/packages/website/src/pages/letters/to-designers.njk
+++ b/packages/website/src/pages/letters/to-designers.njk
@@ -2,6 +2,9 @@
 title: A Letter to Designers | uiloos
 layout: layouts/base.njk
 permalink: /letters/to-designers/
+renderData: 
+  description: "A letter to designers explaining the benefits of using uiloos."
+  keywords: "uiloos, benefits, designer"
 ---
 
 <section>
