--- a/packages/website/src/pages/releases/angular/angular-releases.njk
+++ b/packages/website/src/pages/releases/angular/angular-releases.njk
@@ -4,6 +4,8 @@ layout: layouts/base.njk
 permalink: /releases/angular/
 renderData:
   stickyNavigation: false
+  description: "Lists all releases of @uiloos/angular"
+  keywords: "uiloos angular releases, angular release hub"
 ---
 
 <section class="max-w-6xl mx-auto px-5 sm:px-6 md:pb-20 mt-8">
