--- a/packages/website/src/pages/releases/core/core-releases.njk
+++ b/packages/website/src/pages/releases/core/core-releases.njk
@@ -4,6 +4,8 @@ layout: layouts/base.njk
 permalink: /releases/core/
 renderData:
   stickyNavigation: false
+  description: "Lists all releases of @uiloos/core"
+  keywords: "uiloos core releases, core release hub"
 ---
 
 <section class="max-w-6xl mx-auto px-5 sm:px-6 md:pb-20 mt-8">
