--- a/packages/website/src/pages/releases/releases.njk
+++ b/packages/website/src/pages/releases/releases.njk
@@ -7,6 +7,8 @@ eleventyNavigation:
   order: 2
 renderData:
   stickyNavigation: false
+  description: "Lists all releases of uiloos"
+  keywords: "uiloos releases, uiloos releases hub"
 ---
 
 <section class="max-w-6xl mx-auto px-5 sm:px-6 md:pb-20 mt-8">
