--- a/packages/website/src/pages/releases/vue/1.1.0.njk
+++ b/packages/website/src/pages/releases/vue/1.1.0.njk
@@ -3,7 +3,9 @@ title: "1.1.0 | @uiloos/vue | Releases | uiloos"
 layout: layouts/base.njk
 permalink: /releases/vue/1.1.0/
 renderData:
-  stickyNavigation: false
+  stickyNavigation: falses
+  description: "Release notes of @uiloos/vue 1.1.0"
+  keywords: "release notes @uiloos/vue 1.1.0, changelog @uiloos/vue 1.1.0"
 ---
 
 <section class="max-w-6xl mx-auto px-5 sm:px-6 my-8">
