--- a/packages/website/src/pages/releases/vue/vue-releases.njk
+++ b/packages/website/src/pages/releases/vue/vue-releases.njk
@@ -3,7 +3,9 @@ title: "@uiloos/vue | Releases | uiloos"
 layout: layouts/base.njk
 permalink: /releases/vue/
 renderData:
-  stickyNavigation: false
+  stickyNavigation: false 
+  description: "Lists all releases of @uiloos/vue"
+  keywords: "uiloos vue releases, vue release hub"
 ---
 
 <section class="max-w-6xl mx-auto px-5 sm:px-6 md:pb-20 mt-8">
